Aggiunta footer [esercizio finito]

--- a/index.html
+++ b/index.html
@@ -467,31 +467,112 @@
             </div>
         </section>
 
-        <section>
-            <h2></h2>
-            <hr>
-            <div></div>
-            <hr>
-            <div></div>
-            <hr>
-            <div></div>
-            <hr>
-            <div></div>
-            <hr>
+        <section class="faq container-65">
+            <h2 class="mb-40">Domande frequenti</h2>
+            <div class="clearfix p-30 bt-grey bb-grey">
+                <div class="col w-80">
+                    <strong>
+                        Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </strong>
+                </div>
+                <div class="col w-20 text-right pr-40">
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+            </div>
+            <div class="clearfix p-30 bb-grey">
+                <div class="col w-80">
+                    <strong>
+                        Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </strong>
+                </div>
+                <div class="col w-20 text-right pr-40">
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+            </div>
+            <div class="clearfix p-30 bb-grey">
+                <div class="col w-80">
+                    <strong>
+                        Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </strong>
+                </div>
+                <div class="col w-20 text-right pr-40">
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+            </div>
+            <div class="clearfix p-30 bb-grey">
+                <div class="col w-80">
+                    <strong>
+                        Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </strong>
+                </div>
+                <div class="col w-20 text-right pr-40">
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+            </div>
         </section>
 
     </main>
 
-
     <!-- Parte finale della pagina -->
     <footer>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <hr>
-        <div></div>
+        <div class="container-80">
+            <div class="clearfix bottom-menu">
+                <div class="col w-20">
+                    <h5>Dropbox</h5>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perché Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col w-20">
+                    <h5>Prodotti</h5>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perché Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col w-20">
+                    <h5>Azienda</h5>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perché Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col w-20">
+                    <h5>Supporto</h5>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perché Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>
+                </div>
+                <div class="col w-20">
+                    <h5>Community</h5>
+                    <ul>
+                        <li><a href="#">Applicazione desktop</a></li>
+                        <li><a href="#">Perché Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="language size-13">
+                <i class="fas fa-globe-americas"></i>
+                Italiano
+                <i class="fas fa-sort-up"></i>
+            </div>
+        </div>
     </footer>
 
 </body>
