--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             </nav>
             <nav class="secondary-menu col w-50 text-right">
                 <ul>
-                    <li><a href="#">Supporto</a></li>
+                    <li>
+                        <a href="#">Supporto</a>
+                    </li>
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
                     <li><a href="#">Accedi</a></li>
                 </ul>
